[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/ui/league-gameover/match-row/MatchRow.gd" type="Script" id=1]
[ext_resource path="res://assets/teams/australian-teams/BlacktownPirates.png" type="Texture" id=2]
[ext_resource path="res://assets/teams/australian-teams/DoonsideDirtSquirrels.png" type="Texture" id=3]
[ext_resource path="res://assets/theme/font_small.tres" type="DynamicFont" id=4]

[node name="MatchRow" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 0.205844
margin_right = 2.0
margin_bottom = -0.480011
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HomeTeam" type="Label" parent="."]
margin_right = 141.0
margin_bottom = 263.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
valign = 1

[node name="HomeIcon" type="TextureRect" parent="."]
margin_left = 145.0
margin_right = 286.0
margin_bottom = 263.0
size_flags_horizontal = 7
size_flags_vertical = 7
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Score" type="Label" parent="."]
margin_left = 290.0
margin_right = 431.0
margin_bottom = 263.0
size_flags_horizontal = 7
size_flags_vertical = 7
align = 1
valign = 1

[node name="AwayIcon" type="TextureRect" parent="."]
margin_left = 435.0
margin_right = 576.0
margin_bottom = 263.0
size_flags_horizontal = 7
size_flags_vertical = 7
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="AwayTeam" type="Label" parent="."]
margin_left = 580.0
margin_right = 722.0
margin_bottom = 263.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
valign = 1
